force-app/main/default/objects/AccountDeletion__c/AccountDeletion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AccountDeletion</label>
</CustomObject>