force-app/main/default/objects/AccountDeletion__c/fields/Admin_emails__c.field-meta.xml
<CustomField>
    <fullName>Admin_emails__c</fullName>
    <description>Email addresses delimited by ;</description>
    <label>Admin emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>