force-app/main/default/objects/AccountDeletion__c/fields/Created_before_years__c.field-meta.xml
<CustomField>
    <fullName>Created_before_years__c</fullName>
    <description>No account suppression if account has been created less than N years ago</description>
    <label>Created before years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>