force-app/main/default/objects/AccountDeletion__c/fields/job_Id__c.field-meta.xml
<CustomField>
    <fullName>job_Id__c</fullName>
    <label>job_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>