force-app/main/default/objects/AccountDeletion__c/fields/Last_account_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_account_Id__c</fullName>
    <description>Updted by the batch</description>
    <label>Last account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>