force-app/main/default/objects/AccountDeletion__c/fields/Nb_run_per_day__c.field-meta.xml
<CustomField>
    <fullName>Nb_run_per_day__c</fullName>
    <description>Maximum 2 runs per hour</description>
    <label>Nb run per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>