force-app/main/default/objects/AccountDeletion__c/fields/Total_deleted_records__c.field-meta.xml
<CustomField>
    <fullName>Total_deleted_records__c</fullName>
    <label>Total deleted records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>