force-app/main/default/objects/AccountDeletion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_deleted_records__c</columns>
    <columns>Max_number_of_analysed_accounts__c</columns>
    <columns>Created_before_years__c</columns>
    <columns>Nb_run_per_day__c</columns>
    <columns>Admin_emails__c</columns>
    <columns>Last_account_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>